--- a/benchmark3.yaml
+++ b/benchmark3.yaml
@@ -1,4 +1,4 @@
-name: Benchmark
+name: BenchmarksEval
 description: |
   Convert a Gemma3 / GPT-NeoX checkpoint + tokenizer/config into a Hugging Face model folder.
 inputs:
@@ -375,7 +375,7 @@ implementation:
             metric_payload = {"compact": compact_results, "full": full_results, "co2_kg": emissions_val, "schema": schema}
 
         # single-line JSON with stable prefix so CI / logs can extract it
-        metric_line = "METRIC_JSON:" + json.dumps(metric_payload, separators=(",","":"), ensure_ascii=False)
+        metric_line = "METRIC_JSON:" + json.dumps(metric_payload, separators=(",", ":"), ensure_ascii=False), ensure_ascii=False)
         print(metric_line, flush=True)
         import sys
         print(metric_line, file=sys.stderr, flush=True)
